# hermes-quant

./: .env.template  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-rqalpha.lock.txt  requirements.lock.txt
.github/: CODEOWNERS
data/manual/: symposium_events.csv
docs/: architecture.md  cb_lake.md  engine_validation.md  factor_research.md  index_effect_study.md  index_rotation_study.md  intraday.md  limit_up_study.md  multi_factor.md  oos_decay.md  paper_trading.md  risk_control.md  ruleset_studies.md
scripts/: a2_sizing_demo.py  a3_sector_demo.py  a4_size_demo.py  accumulate_if_minute.ps1  accumulate_if_minute.py  backtest_demo.py  box_trading_study.py  build_capex_lake.py  build_cb_lake.py  build_csi500_dataset.py  build_dividend_holder_lakes.py  build_fundamentals_lake.py  build_ipo_star_lake.py  build_pit_dataset.py  cadence_universe_study.py  capex_transition_study.py  cb_double_low_study.py  cb_paper_live.ps1  cb_paper_live.py  csi500_study.py  csi500_universe_study.py  cyclical_pe_study.py  dividend_band_study.py  dividend_hold_study.py  factor_eval_demo.py  factor_ic_study.py  hedge_study.py  holder_surge_study.py  index_effect_study.py  index_hedge_study.py  index_rotation_study.py  ingest_hs300.py  ingest_size.py  ingest_union.py  ipo_exit_study.py  ipo_limit_study.py  ipo_touch_study.py  limit_up_study.py  liquidity_factor_study.py  lock_externals.py  (+34 more)
scripts/probes/: README.md  backtest_demo.py  portfolio_demo.py  probe_baostock_pit.py  probe_cb_freedata.py  probe_tushare.py  probe_tushare_fundamentals.py  smoke_baostock.py
src/hermes/: __init__.py  config.py  io.py  paths.py
src/hermes/cb/: __init__.py  backtest.py  checks.py  data.py  paper.py  signals.py
src/hermes/data/: __init__.py  fundamentals.py  ingest.py  lake.py  membership.py  sw_indices.py  tushare_source.py
src/hermes/data/sources/: __init__.py  baostock_source.py  tushare_source.py
src/hermes/execution/: __init__.py
src/hermes/intraday/: __init__.py  data.py
src/hermes/live/: __init__.py  feed.py  ledger.py  paper.py  strategy.py
src/hermes/research/: __init__.py
src/hermes/research/backtest/: __init__.py  hedge.py  (+12 more)
tests/: test_calibration.py  test_cb_backtest.py  test_cb_checks.py  test_cb_signals.py  test_data.py  test_drawdown_ladder.py  test_factor_eval.py  test_factors.py  test_frictions.py  test_fundamentals.py  test_hedge.py  test_io_and_feed_gate.py  test_limit_events.py  test_limits.py  test_paper.py  test_portfolio.py  test_regime.py  test_rule_portfolio.py  test_scale_in.py  test_single_name.py  test_sizing.py  test_stops.py  test_walk_forward.py
(+7 files in other folders)
