[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-quant"
description = "A-share quantitative research, backtest and paper-trading system (codename Hermes)."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Rhymer-Lcy" }]
dynamic = ["version"]
classifiers = [
    "Private :: Do Not Upload",  # hard-blocks accidental PyPI publish
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas<3",  # alphalens-reloaded (vnpy[alpha] extra) requires pandas<3; pinned for env consistency
    "scipy",
    "scikit-learn",
    "lightgbm",
    "pyarrow",
    "matplotlib",
    "akshare",
    "baostock",
]

[project.optional-dependencies]
dev = ["pytest"]
# vnpy etc. are installed editable from ./external (pip install -e external/vnpy),
# kept out of `dependencies` so secondary-dev edits take effect.
notebooks = ["jupyterlab"]
# Unused by the deployed pipeline (BaoStock supplies both the lake and PIT membership). The
# adapter in data/sources/tushare_source.py is retained as a reference for a possible paid tier
# and imports tushare lazily, so a default install does not pull it.
tushare = ["tushare"]

[project.urls]
Repository = "https://github.com/Rhymer-Lcy/hermes-quant"

[tool.setuptools.dynamic]
version = { attr = "hermes.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hermes*"]

[tool.setuptools.package-data]
hermes = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
